	  support/regression/tests/gcc-torture-execute-20021120-1.c,
	  support/regression/tests/gcc-torture-execute-20021120-2.c,
	  support/regression/tests/gcc-torture-execute-20020614-1.c,
	  support/regression/tests/gcc-torture-execute-20020819-1.c,
	  support/regression/tests/gcc-torture-execute-20021120-3.c,
	  support/regression/tests/gcc-torture-execute-20021219-1.c,
	  support/regression/tests/gcc-torture-execute-20020328-1.c:
	  More tests from gcc.

2012-10-16 Molnar Karoly <molnarkaroly AT users.sf.net>
        * support/scripts/cinc2h.pl: Comfortable version.
          Writes to the separate directory (device and header) the *.C and
          *.H files. Removed the --create-pseudo-registers option.

2012-10-16 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/include/pic16/usart.h:
	  Simplification the definition of __SDCC_NO_SPBRGH.
	  Thanks to Diego Herranz.

2012-10-16 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/pic18fam-h-gen.pl,
	  device/non-free/include/pic16/pic18fam.h:
	  Repaired the wrong classification of "__SDCC_PIC16_FAMILY 1865850"
	  in the (E)USART style.

2012-10-16 Molnar Karoly <molnarkaroly AT users.sf.net>
	* doc/sdccman.lyx: Added the new pic processors.

2012-10-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCmain.c:
	  Fixed typo in --std-c89 option description.

2012-10-16 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/opcodes/ia64-opc.h:
	  fixed bug #3577586 - missing binutils headers on ia64

2012-10-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* device/include/mcs51/lint.h:
	  Fixed bug #3577318.

2012-10-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/as6808/m08mch.c,
	* sdas/as6808/m08pst.c,
	* sdas/as6808/m6808.h,
	* sdas/as6808/Makefile.in,
	* sdas/as8051/i51mch.c,
	* sdas/as8051/i51pst.c,
	* sdas/as8051/Makefile.in,
	* sdas/asgb/gb.h,
	* sdas/asgb/gbadr.c,
	* sdas/asgb/gbmch.c,
	* sdas/asgb/Makefile.in,